--- a/BackEndFinalProject/package.json
+++ b/BackEndFinalProject/package.json
@@ -1,11 +1,21 @@
 {
-  "name": "backendfinalproject",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+	"name": "backendfinalproject",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node ./src/index.js",
+		"dev": "nodemon ./src/index.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
+		"mysql2": "^3.9.7"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.0"
+	}
 }
