--- a/BackEndFinalProject/package.json
+++ b/BackEndFinalProject/package.json
@@ -13,7 +13,8 @@
 	"dependencies": {
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
-		"mysql2": "^3.9.7"
+		"mysql2": "^3.9.7",
+		"validator": "^13.11.0"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.0"
