--- a/BackEndFinalProject/package.json
+++ b/BackEndFinalProject/package.json
@@ -11,9 +11,11 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"argon2": "^0.40.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
+		"jsonwebtoken": "^9.0.2",
 		"mysql2": "^3.9.7",
 		"validator": "^13.11.0"
 	},
