--- a/BackEndFinalProject/.env.example
+++ b/BackEndFinalProject/.env.example
@@ -3,3 +3,4 @@ DB_PORT=3306
 DB_USER=database_user
 DB_PASSWORD=database_password
 DB_DATABASE= name_of_your_database
+TOKEN_SECRET=your_token_secret
