--- a/FrontEndFinalProject/package.json
+++ b/FrontEndFinalProject/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "jwt-decode": "^4.0.0",
     "primereact": "^10.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0",
+    "react-router-dom": "^6.23.1",
     "wouter": "^3.1.2"
   },
   "devDependencies": {
