--- a/FrontEndFinalProject/package.json
+++ b/FrontEndFinalProject/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
     "primereact": "^10.6.4",
     "react": "^18.2.0",
