--- a/FrontEndFinalProject/package.json
+++ b/FrontEndFinalProject/package.json
@@ -15,6 +15,7 @@
     "primereact": "^10.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "wouter": "^3.1.2"
   },
